src/main/antlr3/org/culturegraph/mf/flux/parser/FluxParser.java
// $ANTLR 3.5 D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g 2013-04-04 19:18:55

package org.culturegraph.mf.flux.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class FluxParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARG", "ASSIGN", "DEFAULT", "Digit", 
		"EscapeSequence", "HexDigit", "Identifier", "LINE_COMMENT", "Letter", 
		"OctalEscape", "QualifiedName", "SUBFLOW", "StartString", "StdIn", "StringLiteral", 
		"TEE", "UnicodeEscape", "VarRef", "WS", "'('", "')'", "'+'", "','", "'.'", 
		"';'", "'='", "'default '", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int ARG=4;
	public static final int ASSIGN=5;
	public static final int DEFAULT=6;
	public static final int Digit=7;
	public static final int EscapeSequence=8;
	public static final int HexDigit=9;
	public static final int Identifier=10;
	public static final int LINE_COMMENT=11;
	public static final int Letter=12;
	public static final int OctalEscape=13;
	public static final int QualifiedName=14;
	public static final int SUBFLOW=15;
	public static final int StartString=16;
	public static final int StdIn=17;
	public static final int StringLiteral=18;
	public static final int TEE=19;
	public static final int UnicodeEscape=20;
	public static final int VarRef=21;
	public static final int WS=22;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public FluxParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public FluxParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return FluxParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g"; }


	public static class flux_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "flux"
	// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:43:1: flux : ( varDef )* mainflow ;
	public final FluxParser.flux_return flux() throws RecognitionException {
		FluxParser.flux_return retval = new FluxParser.flux_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope varDef1 =null;
		ParserRuleReturnScope mainflow2 =null;


		try {
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:44:3: ( ( varDef )* mainflow )
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:45:3: ( varDef )* mainflow
			{
			root_0 = (CommonTree)adaptor.nil();


			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:45:3: ( varDef )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==Identifier) ) {
					int LA1_2 = input.LA(2);
					if ( (LA1_2==29) ) {
						alt1=1;
					}

				}
				else if ( (LA1_0==30) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:45:3: varDef
					{
					pushFollow(FOLLOW_varDef_in_flux113);
					varDef1=varDef();
					state._fsp--;

					adaptor.addChild(root_0, varDef1.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			pushFollow(FOLLOW_mainflow_in_flux116);
			mainflow2=mainflow();
			state._fsp--;

			adaptor.addChild(root_0, mainflow2.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "flux"


	public static class varDef_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDef"
	// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:51:1: varDef : ( 'default ' i= Identifier '=' exp ';' -> ^( DEFAULT Identifier exp ) |i= Identifier '=' exp ';' -> ^( ASSIGN Identifier exp ) );
	public final FluxParser.varDef_return varDef() throws RecognitionException {
		FluxParser.varDef_return retval = new FluxParser.varDef_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token i=null;
		Token string_literal3=null;
		Token char_literal4=null;
		Token char_literal6=null;
		Token char_literal7=null;
		Token char_literal9=null;
		ParserRuleReturnScope exp5 =null;
		ParserRuleReturnScope exp8 =null;

		CommonTree i_tree=null;
		CommonTree string_literal3_tree=null;
		CommonTree char_literal4_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree char_literal7_tree=null;
		CommonTree char_literal9_tree=null;
		RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
		RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
		RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");

		try {
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:52:3: ( 'default ' i= Identifier '=' exp ';' -> ^( DEFAULT Identifier exp ) |i= Identifier '=' exp ';' -> ^( ASSIGN Identifier exp ) )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==30) ) {
				alt2=1;
			}
			else if ( (LA2_0==Identifier) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:53:3: 'default ' i= Identifier '=' exp ';'
					{
					string_literal3=(Token)match(input,30,FOLLOW_30_in_varDef140);  
					stream_30.add(string_literal3);

					i=(Token)match(input,Identifier,FOLLOW_Identifier_in_varDef144);  
					stream_Identifier.add(i);

					char_literal4=(Token)match(input,29,FOLLOW_29_in_varDef146);  
					stream_29.add(char_literal4);

					pushFollow(FOLLOW_exp_in_varDef148);
					exp5=exp();
					state._fsp--;

					stream_exp.add(exp5.getTree());
					char_literal6=(Token)match(input,28,FOLLOW_28_in_varDef150);  
					stream_28.add(char_literal6);

					// AST REWRITE
					// elements: exp, Identifier
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 54:5: -> ^( DEFAULT Identifier exp )
					{
						// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:55:7: ^( DEFAULT Identifier exp )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DEFAULT, "DEFAULT"), root_1);
						adaptor.addChild(root_1, stream_Identifier.nextNode());
						adaptor.addChild(root_1, stream_exp.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:56:5: i= Identifier '=' exp ';'
					{
					i=(Token)match(input,Identifier,FOLLOW_Identifier_in_varDef178);  
					stream_Identifier.add(i);

					char_literal7=(Token)match(input,29,FOLLOW_29_in_varDef180);  
					stream_29.add(char_literal7);

					pushFollow(FOLLOW_exp_in_varDef182);
					exp8=exp();
					state._fsp--;

					stream_exp.add(exp8.getTree());
					char_literal9=(Token)match(input,28,FOLLOW_28_in_varDef184);  
					stream_28.add(char_literal9);

					// AST REWRITE
					// elements: Identifier, exp
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 57:5: -> ^( ASSIGN Identifier exp )
					{
						// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:58:7: ^( ASSIGN Identifier exp )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ASSIGN, "ASSIGN"), root_1);
						adaptor.addChild(root_1, stream_Identifier.nextNode());
						adaptor.addChild(root_1, stream_exp.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDef"


	public static class mainflow_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "mainflow"
	// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:61:1: mainflow : ( StdIn | exp ) '|' ! flow ';' !;
	public final FluxParser.mainflow_return mainflow() throws RecognitionException {
		FluxParser.mainflow_return retval = new FluxParser.mainflow_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token StdIn10=null;
		Token char_literal12=null;
		Token char_literal14=null;
		ParserRuleReturnScope exp11 =null;
		ParserRuleReturnScope flow13 =null;

		CommonTree StdIn10_tree=null;
		CommonTree char_literal12_tree=null;
		CommonTree char_literal14_tree=null;

		try {
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:62:3: ( ( StdIn | exp ) '|' ! flow ';' !)
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:63:3: ( StdIn | exp ) '|' ! flow ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:63:3: ( StdIn | exp )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==StdIn) ) {
				alt3=1;
			}
			else if ( (LA3_0==Identifier||LA3_0==StringLiteral) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:64:5: StdIn
					{
					StdIn10=(Token)match(input,StdIn,FOLLOW_StdIn_in_mainflow225); 
					StdIn10_tree = (CommonTree)adaptor.create(StdIn10);
					adaptor.addChild(root_0, StdIn10_tree);

					}
					break;
				case 2 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:65:7: exp
					{
					pushFollow(FOLLOW_exp_in_mainflow233);
					exp11=exp();
					state._fsp--;

					adaptor.addChild(root_0, exp11.getTree());

					}
					break;

			}

			char_literal12=(Token)match(input,32,FOLLOW_32_in_mainflow241); 
			pushFollow(FOLLOW_flow_in_mainflow244);
			flow13=flow();
			state._fsp--;

			adaptor.addChild(root_0, flow13.getTree());

			char_literal14=(Token)match(input,28,FOLLOW_28_in_mainflow246); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mainflow"


	public static class tee_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "tee"
	// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:70:1: tee : ( '{' flow '}' )+ -> ^( TEE ( ^( SUBFLOW flow ) )+ ) ;
	public final FluxParser.tee_return tee() throws RecognitionException {
		FluxParser.tee_return retval = new FluxParser.tee_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal15=null;
		Token char_literal17=null;
		ParserRuleReturnScope flow16 =null;

		CommonTree char_literal15_tree=null;
		CommonTree char_literal17_tree=null;
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleSubtreeStream stream_flow=new RewriteRuleSubtreeStream(adaptor,"rule flow");

		try {
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:71:3: ( ( '{' flow '}' )+ -> ^( TEE ( ^( SUBFLOW flow ) )+ ) )
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:72:3: ( '{' flow '}' )+
			{
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:72:3: ( '{' flow '}' )+
			int cnt4=0;
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==31) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:72:4: '{' flow '}'
					{
					char_literal15=(Token)match(input,31,FOLLOW_31_in_tee263);  
					stream_31.add(char_literal15);

					pushFollow(FOLLOW_flow_in_tee265);
					flow16=flow();
					state._fsp--;

					stream_flow.add(flow16.getTree());
					char_literal17=(Token)match(input,33,FOLLOW_33_in_tee267);  
					stream_33.add(char_literal17);

					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					EarlyExitException eee = new EarlyExitException(4, input);
					throw eee;
				}
				cnt4++;
			}

			// AST REWRITE
			// elements: flow
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 73:5: -> ^( TEE ( ^( SUBFLOW flow ) )+ )
			{
				// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:74:7: ^( TEE ( ^( SUBFLOW flow ) )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TEE, "TEE"), root_1);
				if ( !(stream_flow.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_flow.hasNext() ) {
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:76:9: ^( SUBFLOW flow )
					{
					CommonTree root_2 = (CommonTree)adaptor.nil();
					root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(SUBFLOW, "SUBFLOW"), root_2);
					adaptor.addChild(root_2, stream_flow.nextTree());
					adaptor.addChild(root_1, root_2);
					}

				}
				stream_flow.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tee"


	public static class flow_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "flow"
	// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:80:1: flow : ( pipe | tee ) ( '|' ! ( pipe | tee ) )* ;
	public final FluxParser.flow_return flow() throws RecognitionException {
		FluxParser.flow_return retval = new FluxParser.flow_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal20=null;
		ParserRuleReturnScope pipe18 =null;
		ParserRuleReturnScope tee19 =null;
		ParserRuleReturnScope pipe21 =null;
		ParserRuleReturnScope tee22 =null;

		CommonTree char_literal20_tree=null;

		try {
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:81:3: ( ( pipe | tee ) ( '|' ! ( pipe | tee ) )* )
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:82:3: ( pipe | tee ) ( '|' ! ( pipe | tee ) )*
			{
			root_0 = (CommonTree)adaptor.nil();


			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:82:3: ( pipe | tee )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==Identifier) ) {
				alt5=1;
			}
			else if ( (LA5_0==31) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:83:5: pipe
					{
					pushFollow(FOLLOW_pipe_in_flow338);
					pipe18=pipe();
					state._fsp--;

					adaptor.addChild(root_0, pipe18.getTree());

					}
					break;
				case 2 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:84:7: tee
					{
					pushFollow(FOLLOW_tee_in_flow346);
					tee19=tee();
					state._fsp--;

					adaptor.addChild(root_0, tee19.getTree());

					}
					break;

			}

			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:86:3: ( '|' ! ( pipe | tee ) )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==32) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:87:5: '|' ! ( pipe | tee )
					{
					char_literal20=(Token)match(input,32,FOLLOW_32_in_flow360); 
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:88:5: ( pipe | tee )
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==Identifier) ) {
						alt6=1;
					}
					else if ( (LA6_0==31) ) {
						alt6=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 6, 0, input);
						throw nvae;
					}

					switch (alt6) {
						case 1 :
							// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:89:7: pipe
							{
							pushFollow(FOLLOW_pipe_in_flow375);
							pipe21=pipe();
							state._fsp--;

							adaptor.addChild(root_0, pipe21.getTree());

							}
							break;
						case 2 :
							// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:90:9: tee
							{
							pushFollow(FOLLOW_tee_in_flow385);
							tee22=tee();
							state._fsp--;

							adaptor.addChild(root_0, tee22.getTree());

							}
							break;

					}

					}
					break;

				default :
					break loop7;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "flow"


	public static class pipe_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "pipe"
	// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:100:1: pipe : qualifiedName ( '(' pipeArgs ')' )? -> ^( QualifiedName[$qualifiedName.text] ( pipeArgs )* ) ;
	public final FluxParser.pipe_return pipe() throws RecognitionException {
		FluxParser.pipe_return retval = new FluxParser.pipe_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal24=null;
		Token char_literal26=null;
		ParserRuleReturnScope qualifiedName23 =null;
		ParserRuleReturnScope pipeArgs25 =null;

		CommonTree char_literal24_tree=null;
		CommonTree char_literal26_tree=null;
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
		RewriteRuleSubtreeStream stream_qualifiedName=new RewriteRuleSubtreeStream(adaptor,"rule qualifiedName");
		RewriteRuleSubtreeStream stream_pipeArgs=new RewriteRuleSubtreeStream(adaptor,"rule pipeArgs");

		try {
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:101:3: ( qualifiedName ( '(' pipeArgs ')' )? -> ^( QualifiedName[$qualifiedName.text] ( pipeArgs )* ) )
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:102:3: qualifiedName ( '(' pipeArgs ')' )?
			{
			pushFollow(FOLLOW_qualifiedName_in_pipe426);
			qualifiedName23=qualifiedName();
			state._fsp--;

			stream_qualifiedName.add(qualifiedName23.getTree());
			// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:102:17: ( '(' pipeArgs ')' )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==23) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:102:18: '(' pipeArgs ')'
					{
					char_literal24=(Token)match(input,23,FOLLOW_23_in_pipe429);  
					stream_23.add(char_literal24);

					pushFollow(FOLLOW_pipeArgs_in_pipe431);
					pipeArgs25=pipeArgs();
					state._fsp--;

					stream_pipeArgs.add(pipeArgs25.getTree());
					char_literal26=(Token)match(input,24,FOLLOW_24_in_pipe433);  
					stream_24.add(char_literal26);

					}
					break;

			}

			// AST REWRITE
			// elements: pipeArgs
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 103:5: -> ^( QualifiedName[$qualifiedName.text] ( pipeArgs )* )
			{
				// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:104:7: ^( QualifiedName[$qualifiedName.text] ( pipeArgs )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(QualifiedName, (qualifiedName23!=null?input.toString(qualifiedName23.start,qualifiedName23.stop):null)), root_1);
				// D:\\Git\\metafacture-core\\src\\main\\antlr3\\org\\culturegraph\\mf\\flux\\parser\\Flux.g:104:44: ( pipeArgs )*
				while ( stream_pipeArgs.hasNext() ) {
					adaptor.addChild(root_1, stream_pipeArgs.nextTree());
				}
				stream_pipeArgs.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
